Modified license file